--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <title>Raijin</title>
+    <title>Braeton Buckley's Portfolio</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/css/bootstrap.min.css">
@@ -13,20 +13,20 @@
 <nav class="navbar navbar-inverse">
     <div class="container-fluid">
         <div class="navbar-header">
-            <a class="navbar-brand" href="#">Raijin</a>
+            <a class="navbar-brand" href="#">Braeton Buckley</a>
         </div>
         <ul class="nav navbar-nav">
             <li class="active"><a href="https://kallenxcc.github.io/home.html">Home</a></li>
-            <li><a href="https://kallenxcc.github.io/famtree.html">FamTree</a></li>
-            <li><a href="https://kallenxcc.github.io/members.html">Members</a></li>
-            <li><a href="https://kallenxcc.github.io/pictures.html">Pictures</a></li>
-            <li><a href="https://kallenxcc.github.io/birthdays.html">Birthdays</a></li>
+            <li><a href="https://kallenxcc.github.io/resume.html">Resume</a></li>
+            <li><a href="https://kallenxcc.github.io/workExperience.html">Work Experience</a></li>
+            <li><a href="https://kallenxcc.github.io/projects.html">Projects</a></li>
+            <li><a href="https://kallenxcc.github.io/contact.html">Contact Me</a></li>
         </ul>
     </div>
 </nav>
 
-<h2>Welcome To Raijin!</h2>
-<img src="https://raw.githubusercontent.com/KallenXCC/Raijin/master/pictures/raijin_logo.png" class="img-responsive" alt="Raijin_2019" width="800" height="800">
+<h2>Hello! I'm Braeton Buckley</h2>
+<img src="https://raw.githubusercontent.com/KallenXCC/KallenXCC.github.io/master/pictures/BB_LinkedIn" class="img-responsive" alt="BB_LinkedIn" width="800" height="800">
 
 </body>
 </html>
