members becomes workExperience

--- a/workExperience.html
+++ b/workExperience.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <title>Raijin</title>
+    <title>Braeton Buckley's Work Experience</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/css/bootstrap.min.css">
@@ -18,21 +18,21 @@
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </button>
-      <a class="navbar-brand" href="#">Raijin</a>
+      <a class="navbar-brand" href="#">Braeton Buckley</a>
     </div>
     <div class="collapse navbar-collapse" id="myNavbar">
       <ul class="nav navbar-nav">
           <li><a href="home.html">Home</a></li>
-          <li><a href="famtree.html">FamTree</a></li>
-          <li class="active"><a href="members.html">Members</a></li>
-          <li><a href="pictures.html">Pictures</a></li>
-          <li><a href="birthdays.html">Birthdays</a></li>
+          <li><a href="resume.html">Resume</a></li>
+          <li class="active"><a href="workExperience.html">Work Experience</a></li>
+          <li><a href="projects.html">Projects</a></li>
+          <li><a href="contact.html">Contact Me</a></li>
       </ul>
     </div>
   </div>
 </nav>
 
-<img src="pictures/Raijin Family Tree 2019.png" class="img-responsive" alt="Raijin_2019" width="1600" height="1000">
+    <a href="https://www.jetheaddev.com/">JetHead Development Inc.</a>
 
 </body>
 </html>
