--- a/contact.html
+++ b/contact.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <title>Raijin</title>
+    <title>Braeton Buckley's Contact Info</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/css/bootstrap.min.css">
@@ -18,22 +18,22 @@
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </button>
-      <a class="navbar-brand" href="#">Raijin</a>
+      <b class="navbar-brand">BB</b>
     </div>
     <div class="collapse navbar-collapse" id="myNavbar">
       <ul class="nav navbar-nav">
           <li><a href="home.html">Home</a></li>
-          <li><a href="famtree.html">FamTree</a></li>
-          <li><a href="members.html">Members</a></li>
-          <li class="active"><a href="pictures.html">Pictures</a></li>
-          <li><a href="birthdays.html">Birthdays</a></li>
+          <li><a href="resume.html">Resume</a></li>
+          <li><a href="workExperience.html">Work Experience</a></li>
+          <li><a href="projects.html">Projects</a></li>
+          <li class="active"><a href="contact.html">Contact Me</a></li>
       </ul>
     </div>
   </div>
 </nav>
 
-<h2>Welcome To Raijin!</h2>
-<img src="pictures/raijin_logo.png" class="img-responsive" alt="Raijin_2019" width="800" height="800">
+<h3><b>Email:</b> braetonbuckley@gmail.com</h3>
+<h3><b>Phone:</b> 714-904-2063</h3>
 
 </body>
 </html>
