--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <nav class="navbar navbar-inverse">
     <div class="container-fluid">
         <div class="navbar-header">
-            <a class="navbar-brand" href="#">Braeton Buckley</a>
+            <b class="navbar-brand">BB</b>
         </div>
         <ul class="nav navbar-nav">
             <li class="active"><a href="https://kallenxcc.github.io/home.html">Home</a></li>
