fixed image link

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 </nav>
 
 <h2>Hello! I'm Braeton Buckley</h2>
-<img src="https://raw.githubusercontent.com/KallenXCC/KallenXCC.github.io/master/pictures/BB_LinkedIn" class="img-responsive" alt="BB_LinkedIn" width="800" height="800">
+<img src="pictures/BB_LinkedIn.jpg" class="img-responsive" alt="BB_LinkedIn" width="800" height="800">
 
 </body>
 </html>
