--- a/resume.html
+++ b/resume.html
@@ -32,7 +32,7 @@
   </div>
 </nav>
 
-<img src="pictures/BB_Resume_Apr2023.pdf" class="img-responsive" alt="BB_Resume" width="800" height="1600">
+<embed src="pictures/BB_Resume_Apr2023.pdf" width="800" height="1600" />
 
 </body>
 </html>
