pdf display and download

--- a/resume.html
+++ b/resume.html
@@ -32,7 +32,9 @@
   </div>
 </nav>
 
-<embed src="pictures/BB_Resume_Apr2023.pdf" width="800" height="1600" />
+<object data="/pictures/BB_Resume_Apr2023.pdf" type="application/pdf" width="100%" height="800px">
+      <p><a href="/pictures/BB_Resume_Apr2023.pdf">Download</a></p>
+    </object>
 
 </body>
 </html>
