--- a/resume.html
+++ b/resume.html
@@ -32,7 +32,7 @@
   </div>
 </nav>
 
-<object data="/pictures/BB_Resume_Apr2023.pdf" type="application/pdf" width="100%" height="800px">
+<object data="/pictures/BB_Resume_Apr2023.pdf" type="application/pdf" width="100%" height="100%">
       <p><a href="/pictures/BB_Resume_Apr2023.pdf">Download</a></p>
     </object>
 
