--- a/resume.html
+++ b/resume.html
@@ -32,9 +32,7 @@
   </div>
 </nav>
 
-<object data="/pictures/BB_Resume_Apr2023.pdf" type="application/pdf" width="100%" height="100%">
-      <p><a href="/pictures/BB_Resume_Apr2023.pdf">Download</a></p>
-    </object>
+    <iframe src="pictures/BB_Resume_Apr2023.pdf" width="100%" height="100%"></iframe>
 
 </body>
 </html>
