--- a/resume.html
+++ b/resume.html
@@ -32,7 +32,9 @@
   </div>
 </nav>
 
-    <iframe src="pictures/BB_Resume_Apr2023.pdf" width="100%" height="100%"></iframe>
+    <iframe src="/pictures/BB_Resume_Apr2023.pdf" width="100%" height="100%">
+        <a href="/pictures/BB_Resume_Apr2023.pdf">Download Resume PDF</a>
+    </iframe>
 
 </body>
 </html>
