--- a/projects.html
+++ b/projects.html
@@ -32,7 +32,7 @@
   </div>
 </nav>
 
-<a href="github.com/KallenXCC">Github</a>
+<a href="https://github.com/KallenXCC">Github</a>
 
 </body>
 </html>
