--- a/resume.html
+++ b/resume.html
@@ -7,13 +7,6 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/css/bootstrap.min.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/js/bootstrap.min.js"></script>
-    <style type="text/css">
-        iframe {
-            width: 100%;
-            height: 100%;
-            border: 0
-        }
-    </style>
 </head>
 <body>
 
@@ -39,7 +32,7 @@
   </div>
 </nav>
 
-    <iframe src="/pictures/BB_Resume_Apr2023.pdf">
+    <iframe src="/pictures/BB_Resume_Apr2023.pdf" style="width: 100%;height: 100%;border: none;">
         <a href="/pictures/BB_Resume_Apr2023.pdf">Download Resume PDF</a>
     </iframe>
 
