--- a/workExperience.html
+++ b/workExperience.html
@@ -32,9 +32,9 @@
   </div>
 </nav>
 
-    <h4><a href="https://www.jetheaddev.com/">JetHead Development Inc.</a></h4>
-    <h4>Software Engineer | May 2020 - Mar 2023</h4>
-    <p>Developed software for DirecTV satellite set top boxes using mainly C++ and JSON. 
+    <h3 style="margin-left: 1;"><a href="https://www.jetheaddev.com/" target="_blank">JetHead Development Inc.</a></h3>
+    <h4 style="margin-left: 2;">Software Engineer | May 2020 - Mar 2023</h4>
+    <p style="margin-left: 3;">Developed software for DirecTV satellite set top boxes using mainly C++ and JSON. 
        Worked on several new features both individually and with other teams under ATT exercising agile development in 10 week cycles. 
        Planned, designed, and documented features for communication of proper feature expectations. 
        Identified, tested, and patched numerous bugs from the field.
@@ -47,16 +47,17 @@
       Learned to flash updates onto the satellite boxes. 
       Practiced proper version control and code review practices using GitLab and Jenkins.</p>
 
-    <h4>References</h4>
-    <h4>Varun Madahar, Director of Engineering, JetHead Development Inc.</h4>
-    <p>"As the lead developer, Braeton demonstrated continuous dedication to excellence and attention to detail in all aspects of the role. I have also been impressed with his communication skills and ability to work collaboratively with team members. It has been a pleasure working with Braeton from the very beginning, and I would jump at the chance to do it again."</p>  
-    <h4>Ryan Nabatilan, Team Manager, JetHead Development Inc.</h4>
-    <p><i>Contact info can be requested from Braeton Buckley, or directly from <a href=https://www.jetheaddev.com/#contact>JetHead</a>.</i></p>
-    <h4><a href="https://jacl.org">Japanese American Citizens League</a></h4>
-    <h4>Youth Advisor, Newsletter Editor | <a href="https://riversidejacl.org/riverside_jacl/pages/">Riverside Chapter</a> | September 2016 - Present</h4>
-    <p>Advise youth of Riverside JACL and <a href="https://highlanderlink.ucr.edu/organization/nsu">UCR Nikkei Student Union</a>.
+    <h4 style="margin-left: 2;">References</h4>
+    <h5 style="margin-left: 3;">Varun Madahar, Director of Engineering, JetHead Development Inc.</h5>
+    <p style="margin-left: 4;">"As the lead developer, Braeton demonstrated continuous dedication to excellence and attention to detail in all aspects of the role. I have also been impressed with his communication skills and ability to work collaboratively with team members. It has been a pleasure working with Braeton from the very beginning, and I would jump at the chance to do it again."</p>  
+    <h5 style="margin-left: 3;">Ryan Nabatilan, Team Manager, JetHead Development Inc.</h5>
+    <p style="margin-left: 4;"><i>Contact info can be requested from Braeton Buckley, or directly from <a href="https://www.jetheaddev.com/#contact" target="_blank">JetHead</a>.</i></p>
+    <hr>
+    <h3 style="margin-left: 1;"><a href="https://jacl.org" target="_blank">Japanese American Citizens League</a></h3>
+    <h4 style="margin-left: 2;">Youth Advisor, Newsletter Editor | <a href="https://riversidejacl.org/riverside_jacl/pages/" target="_blank">Riverside Chapter</a> | September 2016 - Present</h4>
+    <p style="margin-left: 3;">Advise youth of Riverside JACL and <a href="https://highlanderlink.ucr.edu/organization/nsu" target="_blank">UCR Nikkei Student Union</a>.
     Create/edit the quarterly newsletter, manage MailChimp and monthly Zoom meetings.</p>
-    <h4>References</h4>
-    <h4>Jennifer Betancourt, Youth Advisor, Riverside JACL</h4>
+    <h4 style="margin-left: 2;">References</h4>
+    <h5 style="margin-left: 3;">Jennifer Betancourt, Youth Advisor, Riverside JACL</h5>
 </body>
 </html>
