--- a/resume.html
+++ b/resume.html
@@ -32,9 +32,9 @@
   </div>
 </nav>
 
-    <iframe src="/pictures/BB_Resume_Apr2023.pdf" style="width: 100%;height: 100%;border: none;">
-        <a href="/pictures/BB_Resume_Apr2023.pdf">Download Resume PDF</a>
-    </iframe>
+  <object data="/pictures/BB_Resume_Apr2023.pdf" type="application/pdf" width="100%" height="800px">
+    <p><a href="/pictures/BB_Resume_Apr2023.pdf">Download Resume PDF</a></p>
+  </object>
 
 </body>
 </html>
