--- a/projects.html
+++ b/projects.html
@@ -32,7 +32,7 @@
   </div>
 </nav>
 
-<a href="https://github.com/KallenXCC">Github</a>
+<h3><a href="https://github.com/KallenXCC">Github</a></h3>
 
 </body>
 </html>
