--- a/projects.html
+++ b/projects.html
@@ -32,7 +32,41 @@
   </div>
 </nav>
 
-<h3><a href="https://github.com/KallenXCC">Github</a></h3>
+<h4>QR Code Troubleshooting | JetHead, DirecTV | 2022</h4>
+<h5>Tools: C++, JSON, Visual Studio, GitLab, DirecTV Genie Mini, Jira, Confluence, Linux</h5>
+  <p>Embedded QR codes into Video Connection Lost troubleshooting screens for the DirecTV Genie Mini to reduce calls to Customer Care.
+    Scanning QR codes redirected to additional <a href="https://www.directv.com/support/satellite/article/KM1453756">troubleshooting help sites</a>.
+    There were different QR Codes and troubleshooting flows based on the error codes: 61x for wireless, and 62x for wired.
+    Reviewed troubleshooting flow for better client and customer understanding.
+  </p>
+
+<h4>Free Memory Tracking KPIs | JetHead, DirecTV | 2021</h4>
+<h5>Tools: C++, NewRelic, Visual Studio, Jenkins, DirecTV Genie Mini, Jira, Confluence, Linux</h5>
+  <p> Created KPIs to track the CPU usage and free memory for the DirecTV Genie Mini.
+    The data was collected on <a href="https://docs.newrelic.com/">New Relic</a> and organized into dashboards for viewing by ATT.
+    The dashboards sorted the data based on hardware make/model and software version.
+    ATT could use this data to identify possible problematic software updates both in the field and in test environments.
+  </p>
+
+<h4><a href="https://github.com/KallenXCC/VR-Project">Ordinary Wizarding Levels (VR Game)</a> | UCR | 2019</h4>
+<h5>Tools: C#, Unity, Oculus</h5>
+  <p>VR game created for our VR class project. Consisted of using wand motion to cast spells to defeat approaching enemies.</p>
+
+<h4><a href="https://github.com/KallenXCC/Database-Management-Project">Database Management Project</a> | UCR | 2018</h4>
+<h5>Tools: Java, TSQL, Shell</h5>
+  <p>Simple database consisting of Customer, Cars, Mechanic, and Service Requests.</p>
+
+<h4><a href="https://youtu.be/1tQ7aReRmcI">Fly Dot</a> | UCR | 2017</h4>
+<h5>Tools: C, Objective-C, ATMega1284</h5>
+  <p><a href="https://github.com/KallenXCC/Embedded-Systems-Project">Embedded systems project</a> created to run with hardware on a breadboard.</p>
+
+<h4><a href="https://github.com/KallenXCC/Platformer-Project">CitrusRPG</a> | Citrus Hack | 2015</h4>
+<h5>Tools: Java, Greenfoot</h5>
+  <p>Platformer game created at UCR's Citrus Hack.</p>
+
+<h4><a href="https://github.com/KallenXCC/APCompSciProj">Rock Collector</a> | Troy Tech | 2013</h4>
+<h5>Tools: Java, Greenfoot</h5>
+  <p>Game that's a spin on asteroids where you shoot aliens and collect rocks.</p>
 
 </body>
 </html>
