--- a/home.html
+++ b/home.html
@@ -32,8 +32,12 @@
   </div>
 </nav>
 
+<div class="container">
+
 <h2> Hello, I'm Braeton Buckley</h2>
 <img src="pictures/BB_LinkedIn.jpg" class="img-responsive" alt="BB_LinkedIn" width="800" height="800">
+
+</div>
 
 </body>
 </html>
