--- a/index.html
+++ b/index.html
@@ -25,8 +25,12 @@
     </div>
 </nav>
 
+<div class="container-fluid">
+
 <h2> Hello, I'm Braeton Buckley</h2>
 <img src="pictures/BB_LinkedIn.jpg" class="img-responsive" alt="BB_LinkedIn" width="800" height="800">
+
+</div>
 
 </body>
 </html>
