--- a/contact.html
+++ b/contact.html
@@ -32,8 +32,12 @@
   </div>
 </nav>
 
+<div class="container-fluid">
+
 <h3><b> Email:</b> braetonbuckley@gmail.com</h3>
 <h3><b> Phone:</b> 714-904-2063</h3>
+
+</div>
 
 </body>
 </html>
