--- a/home.html
+++ b/home.html
@@ -32,7 +32,7 @@
   </div>
 </nav>
 
-<div class="container">
+<div class="container-fluid">
 
 <h2> Hello, I'm Braeton Buckley</h2>
 <img src="pictures/BB_LinkedIn.jpg" class="img-responsive" alt="BB_LinkedIn" width="800" height="800">
