--- a/projects.html
+++ b/projects.html
@@ -32,6 +32,8 @@
   </div>
 </nav>
 
+<div class="container-fluid">
+
 <h4> QR Code Troubleshooting | JetHead, DirecTV | 2022</h4>
 <h5> Tools: C++, JSON, Visual Studio, GitLab, DirecTV Genie Mini, Jira, Confluence, Linux</h5>
   <p> Embedded QR codes into Video Connection Lost troubleshooting screens for the DirecTV Genie Mini to reduce calls to Customer Care.
@@ -71,6 +73,8 @@
 <h4><a href="https://github.com/KallenXCC/APCompSciProj">Rock Collector</a> | Troy Tech | 2013</h4>
 <h5>Tools: Java, Greenfoot</h5>
   <p>Game that's a spin on asteroids where you shoot aliens and collect rocks.</p>
+
+</div>
 
 </body>
 </html>
