--- a/workExperience.html
+++ b/workExperience.html
@@ -32,6 +32,8 @@
   </div>
 </nav>
 
+<div class="container-fluid">
+
     <h3 style="margin-left: 10;"><a href="https://www.jetheaddev.com/" target="_blank">JetHead Development Inc.</a></h3>
     <h4 style="margin-left: 20;">Software Engineer | May 2020 - Mar 2023</h4>
     <p style="margin-left: 30;">Developed software for DirecTV satellite set top boxes using mainly C++ and JSON. 
@@ -62,5 +64,8 @@
     and implements strategies to effect positive social change, particularly to the Asian Pacific American Community.</p>
     <h4 style="margin-left: 20;">References</h4>
     <h5 style="margin-left: 30;">Jennifer Betancourt, Youth Advisor, Riverside JACL</h5>
+
+</div>
+
 </body>
 </html>
