summary and contact info

--- a/contact.html
+++ b/contact.html
@@ -36,6 +36,7 @@
 
 <h3><b> Email:</b> braetonbuckley@gmail.com</h3>
 <h3><b> Phone:</b> 714-904-2063</h3>
+<h3><a href="https://www.linkedin.com/in/braeton-buckley-5b8908b0/">LinkedIn</a></h3>
 
 </div>
 
