add snake canvas

--- a/home.html
+++ b/home.html
@@ -36,7 +36,7 @@
 <div class="container-fluid">
 
 <h3> Hello, I'm Braeton Buckley</h3>
-<img src="pictures/BB_LinkedIn.jpg" class="img-responsive" alt="BB_LinkedIn" width="800" height="800">
+<canvas width="800" height="800" id="game"></canvas>
 
 </div>
 
