canvas display issues

--- a/home.html
+++ b/home.html
@@ -8,6 +8,11 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/js/bootstrap.min.js"></script>
     <script src="scripts/snake.js"></script>
+    canvas {
+      background-color: blue; 
+      width: 100%;
+      height: auto;
+    }
 </head>
 <body>
 
@@ -36,7 +41,7 @@
 <div class="container-fluid">
 
 <h3> Hello, I'm Braeton Buckley</h3>
-<canvas width="800" height="800" id="game"></canvas>
+<canvas width="800" height="800" id="game">Sorry, your browser doesn't support the &lt;canvas&gt; element.</canvas>
 
 </div>
 
