--- a/home.html
+++ b/home.html
@@ -8,11 +8,7 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/js/bootstrap.min.js"></script>
     <script src="scripts/snake.js"></script>
-    canvas {
-      background-color: blue; 
-      width: 100%;
-      height: auto;
-    }
+    <style> canvas {background-color: blue; width: 100%; height: auto;}</style>
 </head>
 <body>
 
