move snake script

--- a/home.html
+++ b/home.html
@@ -7,8 +7,7 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/css/bootstrap.min.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/js/bootstrap.min.js"></script>
-    <script src="scripts/snake.js"></script>
-    <style> canvas {background-color: blue; width: 100%; height: auto;}</style>
+    <style> canvas {border: 1px solid white; background-color: black; width: 100%; height: auto;}</style>
 </head>
 <body>
 
@@ -38,6 +37,7 @@
 
 <h3> Hello, I'm Braeton Buckley</h3>
 <canvas width="800" height="800" id="game">Sorry, your browser doesn't support the &lt;canvas&gt; element.</canvas>
+<script src="scripts/snake.js"></script>
 
 </div>
 
