--- a/home.html
+++ b/home.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/css/bootstrap.min.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/js/bootstrap.min.js"></script>
-    <style> canvas {border: 1px solid white; background-color: black; width: 100%; height: auto;}</style>
+    <style> canvas {border: 1px solid white; background-color: black; max-width: 100%; height: auto;}</style>
 </head>
 <body>
 
