--- a/home.html
+++ b/home.html
@@ -7,7 +7,6 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/css/bootstrap.min.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/js/bootstrap.min.js"></script>
-    <style> canvas {border: 1px solid white; background-color: black; max-width: 100%; height: auto;}</style>
 </head>
 <body>
 
@@ -19,7 +18,7 @@
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </button>
-      <b class="navbar-brand">BB</b>
+      <b class="navbar-brand"><a href="index.html">BB</a></b>
     </div>
     <div class="collapse navbar-collapse" id="myNavbar">
       <ul class="nav navbar-nav">
@@ -36,8 +35,7 @@
 <div class="container-fluid">
 
 <h3> Hello, I'm Braeton Buckley</h3>
-<canvas width="800" height="800" id="game">Sorry, your browser doesn't support the &lt;canvas&gt; element.</canvas>
-<script src="scripts/snake.js"></script>
+<img src="pictures/BB_LinkedIn.jpg" class="img-responsive" alt="BB_LinkedIn" width="800" height="800">
 
 </div>
 
