--- a/index.html
+++ b/index.html
@@ -7,13 +7,14 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/css/bootstrap.min.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/js/bootstrap.min.js"></script>
+    <style> canvas {border: 1px solid white; background-color: black; max-width: 100%; height: auto;}</style>
 </head>
 <body>
 
 <nav class="navbar navbar-inverse">
     <div class="container-fluid">
         <div class="navbar-header">
-            <b class="navbar-brand">BB</b>
+            <b class="navbar-brand"><a href="index.html">BB</a></b>
         </div>
         <ul class="nav navbar-nav">
             <li class="active"><a href="https://kallenxcc.github.io/home.html">Home</a></li>
@@ -29,7 +30,8 @@
 
 <h3> Hello, I'm Braeton Buckley</h3>
 
-<img src="pictures/BB_LinkedIn.jpg" class="img-responsive" alt="BB_LinkedIn" width="800" height="800">
+<canvas width="800" height="800" id="game">Sorry, your browser doesn't support the &lt;canvas&gt; element.</canvas>
+<script src="scripts/snake.js"></script>
 
 </div>
 
