--- a/contact.html
+++ b/contact.html
@@ -18,7 +18,7 @@
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </button>
-      <b class="navbar-brand"><a href="index.html">BB</a></b>
+      <a href="index.html" class="navbar-brand">BB</a>
     </div>
     <div class="collapse navbar-collapse" id="myNavbar">
       <ul class="nav navbar-nav">
