--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 <nav class="navbar navbar-inverse">
     <div class="container-fluid">
         <div class="navbar-header">
-            <b class="navbar-brand"><a href="index.html">BB</a></b>
+            <a href="index.html" class="navbar-brand">BB</a>
         </div>
         <ul class="nav navbar-nav">
             <li class="active"><a href="https://kallenxcc.github.io/home.html">Home</a></li>
