--- a/index.html
+++ b/index.html
@@ -12,20 +12,27 @@
 </head>
 <body style="overflow: hidden;">
 
-<nav class="navbar navbar-inverse">
-    <div class="container-fluid">
-        <div class="navbar-header">
+    <nav class="navbar navbar-inverse">
+        <div class="container-fluid">
+          <div class="navbar-header">
+            <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#myNavbar">
+              <span class="icon-bar"></span>
+              <span class="icon-bar"></span>
+              <span class="icon-bar"></span>
+            </button>
             <a href="index.html" class="navbar-brand">BB</a>
+          </div>
+          <div class="collapse navbar-collapse" id="myNavbar">
+            <ul class="nav navbar-nav">
+                <li class="active"><a href="home.html">Home</a></li>
+                <li><a href="resume.html">Resume</a></li>
+                <li><a href="workExperience.html">Work Experience</a></li>
+                <li><a href="projects.html">Projects</a></li>
+                <li><a href="contact.html">Contact Me</a></li>
+            </ul>
+          </div>
         </div>
-        <ul class="nav navbar-nav">
-            <li class="active"><a href="https://kallenxcc.github.io/home.html">Home</a></li>
-            <li><a href="https://kallenxcc.github.io/resume.html">Resume</a></li>
-            <li><a href="https://kallenxcc.github.io/workExperience.html">Work Experience</a></li>
-            <li><a href="https://kallenxcc.github.io/projects.html">Projects</a></li>
-            <li><a href="https://kallenxcc.github.io/contact.html">Contact Me</a></li>
-        </ul>
-    </div>
-</nav>
+      </nav>
 
 <div class="container-fluid">
 
