--- a/index.html
+++ b/index.html
@@ -12,33 +12,34 @@
 </head>
 <body style="overflow: hidden;">
 
-    <nav class="navbar navbar-inverse">
-        <div class="container-fluid">
-          <div class="navbar-header">
-            <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#myNavbar">
-              <span class="icon-bar"></span>
-              <span class="icon-bar"></span>
-              <span class="icon-bar"></span>
-            </button>
-            <a href="index.html" class="navbar-brand">BB</a>
-          </div>
-          <div class="collapse navbar-collapse" id="myNavbar">
-            <ul class="nav navbar-nav">
-                <li class="active"><a href="home.html">Home</a></li>
-                <li><a href="resume.html">Resume</a></li>
-                <li><a href="workExperience.html">Work Experience</a></li>
-                <li><a href="projects.html">Projects</a></li>
-                <li><a href="contact.html">Contact Me</a></li>
-            </ul>
-          </div>
+<nav class="navbar navbar-inverse">
+    <div class="container-fluid">
+        <div class="navbar-header">
+        <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#myNavbar">
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+        </button>
+        <a href="index.html" class="navbar-brand">BB</a>
         </div>
-      </nav>
+        <div class="collapse navbar-collapse" id="myNavbar">
+        <ul class="nav navbar-nav">
+            <li class="active"><a href="home.html">Home</a></li>
+            <li><a href="resume.html">Resume</a></li>
+            <li><a href="workExperience.html">Work Experience</a></li>
+            <li><a href="projects.html">Projects</a></li>
+            <li><a href="contact.html">Contact Me</a></li>
+        </ul>
+        </div>
+    </div>
+</nav>
 
 <div class="container-fluid">
 
 <h3> Hello, I'm Braeton Buckley</h3>
-
+<div style="user-select: none; -webkit-user-select: none; -moz-user-select: none;">
 <canvas width="500" height="500" id="game">Sorry, your browser doesn't support the &lt;canvas&gt; element.</canvas>
+</div>
 <script src="scripts/snake.js"></script>
 
 </div>
