--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/js/bootstrap.min.js"></script>
     <style> canvas {border: 1px solid white; background-color: black; background-image:url("pictures/BB_LinkedInCrop.jpg"); background-size: 400px; 
-    max-width: 100%; height: auto;}</style>
+    max-width: 100%; height: auto; background-repeat: no-repeat;}</style>
 </head>
 <body style="overflow: hidden;">
 
