--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/css/bootstrap.min.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/js/bootstrap.min.js"></script>
-    <style> canvas {border: 1px solid white; background-color: black; background-image:url("pictures/BB_LinkedInCrop.jpg"); background-size: 400px; 
-    max-width: 100%; height: auto; background-repeat: no-repeat;}</style>
+    <style> canvas {border: 1px solid white; background-color: black; background-image:url("pictures/BB_LinkedInCrop.jpg"); background-size: 400px;
+    width: 400px; max-width: 100%; height: auto; background-repeat: no-repeat;}</style>
 </head>
 <body style="overflow: hidden;">
 
@@ -38,7 +38,7 @@
 
 <h3> Hello, I'm Braeton Buckley</h3>
 <div style="user-select: none; -webkit-user-select: none; -moz-user-select: none;">
-<canvas width="400" height="400" id="game">Sorry, your browser doesn't support the &lt;canvas&gt; element.</canvas>
+<canvas id="game">Sorry, your browser doesn't support the &lt;canvas&gt; element.</canvas>
 </div>
 <script src="scripts/snake.js"></script>
 
