--- a/projects.html
+++ b/projects.html
@@ -54,7 +54,9 @@
 
 <h4><a href="https://github.com/KallenXCC/VR-Project">Ordinary Wizarding Levels (VR Game)</a> | UCR | 2019</h4>
 <h5>Tools: C#, Unity, Oculus</h5>
-  <p>VR game created for our VR class project. Consisted of using wand motion to cast spells to defeat approaching enemies.</p>
+  <p>VR game created for our VR class project. Consisted of using wand motion to cast spells to defeat approaching enemies.
+    Individually focused on enemy AI. Group work on motion controls and environment construction.
+  </p>
 
 <h4><a href="https://github.com/KallenXCC/Database-Management-Project">Database Management Project</a> | UCR | 2018</h4>
 <h5>Tools: Java, TSQL, Shell</h5>
@@ -72,7 +74,7 @@
 
 <h4><a href="https://github.com/KallenXCC/APCompSciProj">Rock Collector</a> | Troy Tech | 2013</h4>
 <h5>Tools: Java, Greenfoot</h5>
-  <p>Game that's a spin on asteroids where you shoot aliens and collect rocks.</p>
+  <p>A spin on Asteroids where you shoot aliens and collect rocks for your company. Featuring 3 levels with music, SFX, and animation. </p>
 
 </div>
 
