--- a/home.html
+++ b/home.html
@@ -35,6 +35,8 @@
 <div class="container-fluid">
 
 <h3> Hello, I'm Braeton Buckley</h3>
+<h4> I'm a Software Developer specializing in C++. I have 3 years of experience at <a href="https://jetheaddev.com">JetHead Development Inc.</a>
+I received my Bachelor's in Computer Science in 2019 from <a href="https://www.ucr.edu/">UC Riverside.</a></h4>
 <img src="pictures/BB_LinkedIn.jpg" class="img-responsive" alt="BB_LinkedIn" width="800" height="800">
 
 </div>
