--- a/workExperience.html
+++ b/workExperience.html
@@ -33,8 +33,15 @@
 </nav>
 
 <div class="container-fluid">
-
-    <h3 style="margin-left: 10;"><a href="https://www.jetheaddev.com/" target="_blank">JetHead Development Inc.</a></h3>
+    <div class="row">
+      <div class="col-md-2">
+        <img src="pictures/jethead_logo.jpg" class="img-responsive" alt="JetHead" width="200" height="60">
+        <img src="pictures/directv_logo.svg" class="img-responsive" alt="DirecTV" width="200" height="60">
+      </div>
+      <div class="col-md-10">
+        <h3 style="margin-left: 10;"><a href="https://www.jetheaddev.com/" target="_blank">JetHead Development Inc.</a></h3>
+      </div>
+    </div>
     <h4 style="margin-left: 20;">Software Engineer | May 2020 - Mar 2023</h4>
     <p style="margin-left: 30;">Developed software for DirecTV satellite set top boxes using mainly C++ and JSON. 
        Worked on several new features both individually and with other teams under ATT exercising agile development in 10 week cycles. 
@@ -55,7 +62,15 @@
     <h5 style="margin-left: 30;">Ryan Nabatilan, Team Manager, JetHead Development Inc.</h5>
     <p style="margin-left: 40;"><i>Contact info can be requested from Braeton Buckley, or directly from <a href="https://www.jetheaddev.com/#contact" target="_blank">JetHead</a>.</i></p>
     <hr>
-    <h3 style="margin-left: 10;"><a href="https://jacl.org" target="_blank">Japanese American Citizens League</a></h3>
+    <div class="row">
+      <div class="col-md-2">
+        <img src="pictures/JACL_Logo.png" class="img-responsive" alt="JACL" width="60" height="60">
+        <img src="pictures/pswlogo.png" class="img-responsive" alt="PSW" width="120" height="60">
+      </div>
+      <div class="col-md-10">
+        <h3 style="margin-left: 10;"><a href="https://jacl.org" target="_blank">Japanese American Citizens League</a></h3>
+      </div>
+    </div>
     <h4 style="margin-left: 20;">Youth Advisor, Newsletter Editor | <a href="https://riversidejacl.org/riverside_jacl/pages/" target="_blank">Riverside Chapter</a> | September 2016 - Present</h4>
     <p style="margin-left: 30;">Advise youth of Riverside JACL and <a href="https://highlanderlink.ucr.edu/organization/nsu" target="_blank">UCR Nikkei Student Union</a>.
     Create/edit the quarterly newsletter, manage MailChimp and monthly Zoom meetings. 
