manual logo columns

--- a/workExperience.html
+++ b/workExperience.html
@@ -33,14 +33,14 @@
 </nav>
 
 <div class="container-fluid">
-    <div class="row row-cols-auto">
-      <div class="col">
+    <div class="row">
+      <div class="col-md-1">
         <h3 style="margin-left: 10;"><a href="https://www.jetheaddev.com/" target="_blank">JetHead Development Inc.</a></h3>
       </div>
-      <div class="col">  
+      <div class="col-md-5">  
         <img src="pictures/jethead_logo.png" class="img-responsive" alt="JetHead" width="130" height="40">
       </div>  
-      <div class="col">  
+      <div class="col-md-10">  
         <img src="pictures/directv_logo.svg" class="img-responsive" alt="DirecTV" width="130" height="40">
       </div>
     </div>
@@ -64,14 +64,14 @@
     <h5 style="margin-left: 30;">Ryan Nabatilan, Team Manager, JetHead Development Inc.</h5>
     <p style="margin-left: 40;"><i>Contact info can be requested from Braeton Buckley, or directly from <a href="https://www.jetheaddev.com/#contact" target="_blank">JetHead</a>.</i></p>
     <hr>
-    <div class="row row-cols-auto">
-      <div class="col">
+    <div class="row">
+      <div class="col-md-1">
         <h3 style="margin-left: 10;"><a href="https://jacl.org" target="_blank">Japanese American Citizens League</a></h3>
       </div>
-      <div class="col">  
+      <div class="col-md-6">  
         <img src="pictures/JACL_Logo.png" class="img-responsive" alt="JACL" width="60" height="60">
       </div>
-      <div class="col">  
+      <div class="col-md-9">  
         <img src="pictures/pswlogo.png" class="img-responsive" alt="PSW" width="120" height="60">
       </div>
     </div>
