--- a/workExperience.html
+++ b/workExperience.html
@@ -34,13 +34,13 @@
 
 <div class="container-fluid">
     <div class="row">
-      <div class="col-md-1">
+      <div class="col-xs-6 col-md-4">
         <h3 style="margin-left: 10;"><a href="https://www.jetheaddev.com/" target="_blank">JetHead Development Inc.</a></h3>
       </div>
-      <div class="col-md-5">  
+      <div class="col-xs-1 col-md-1">  
         <img src="pictures/jethead_logo.png" class="img-responsive" alt="JetHead" width="130" height="40">
       </div>  
-      <div class="col-md-10">  
+      <div class="col-xs-1 col-md-1">  
         <img src="pictures/directv_logo.svg" class="img-responsive" alt="DirecTV" width="130" height="40">
       </div>
     </div>
@@ -65,13 +65,13 @@
     <p style="margin-left: 40;"><i>Contact info can be requested from Braeton Buckley, or directly from <a href="https://www.jetheaddev.com/#contact" target="_blank">JetHead</a>.</i></p>
     <hr>
     <div class="row">
-      <div class="col-md-1">
+      <div class="col-xs-6 col-md-4">
         <h3 style="margin-left: 10;"><a href="https://jacl.org" target="_blank">Japanese American Citizens League</a></h3>
       </div>
-      <div class="col-md-6">  
+      <div class="col-xs-1 col-md-1">  
         <img src="pictures/JACL_Logo.png" class="img-responsive" alt="JACL" width="60" height="60">
       </div>
-      <div class="col-md-9">  
+      <div class="col-xs-1 col-md-1">  
         <img src="pictures/pswlogo.png" class="img-responsive" alt="PSW" width="120" height="60">
       </div>
     </div>
