logo column adjustments

--- a/workExperience.html
+++ b/workExperience.html
@@ -34,13 +34,13 @@
 
 <div class="container-fluid">
     <div class="row">
-      <div class="col-xs-6 col-md-4">
+      <div class="col-md-2">
         <h3 style="margin-left: 10;"><a href="https://www.jetheaddev.com/" target="_blank">JetHead Development Inc.</a></h3>
       </div>
-      <div class="col-xs-1 col-md-1">  
+      <div class="col-md-1">  
         <img src="pictures/jethead_logo.png" class="img-responsive" alt="JetHead" width="130" height="40">
       </div>  
-      <div class="col-xs-1 col-md-1">  
+      <div class="col-md-1">  
         <img src="pictures/directv_logo.svg" class="img-responsive" alt="DirecTV" width="130" height="40">
       </div>
     </div>
@@ -65,14 +65,14 @@
     <p style="margin-left: 40;"><i>Contact info can be requested from Braeton Buckley, or directly from <a href="https://www.jetheaddev.com/#contact" target="_blank">JetHead</a>.</i></p>
     <hr>
     <div class="row">
-      <div class="col-xs-6 col-md-4">
+      <div class="col-md-3">
         <h3 style="margin-left: 10;"><a href="https://jacl.org" target="_blank">Japanese American Citizens League</a></h3>
       </div>
-      <div class="col-xs-1 col-md-1">  
-        <img src="pictures/JACL_Logo.png" class="img-responsive" alt="JACL" width="60" height="60">
-      </div>
-      <div class="col-xs-1 col-md-1">  
+      <div class="col-md-1">  
         <img src="pictures/pswlogo.png" class="img-responsive" alt="PSW" width="120" height="60">
+      </div>
+      <div class="col-md-1">  
+        <img src="pictures/JACL_Logo.png" class="img-responsive" alt="JACL" width="60" height="60">
       </div>
     </div>
     <h4 style="margin-left: 20;">Youth Advisor, Newsletter Editor | <a href="https://riversidejacl.org/riverside_jacl/pages/" target="_blank">Riverside Chapter</a> | September 2016 - Present</h4>
