--- a/resume.html
+++ b/resume.html
@@ -31,10 +31,11 @@
     </div>
   </div>
 </nav>
-
-  <object data="/pictures/BB_Resume_Apr2023.pdf" type="application/pdf" width="100%" height="800px">
-    <p><a href="/pictures/BB_Resume_Apr2023.pdf"> Download Resume PDF</a></p>
-  </object>
+  <div class='embed-responsive' style='padding-bottom:150%'>
+    <object data="/pictures/BB_Resume_Apr2023.pdf" type="application/pdf" width="100%" height="800px">
+      <p><a href="/pictures/BB_Resume_Apr2023.pdf"> Download Resume PDF</a></p>
+    </object>
+  </div>
 
 </body>
 </html>
