updated resume and experience

--- a/workExperience.html
+++ b/workExperience.html
@@ -83,7 +83,42 @@
     and implements strategies to effect positive social change, particularly to the Asian Pacific American Community.</p>
     <h4 style="margin-left: 20;">References</h4>
     <h5 style="margin-left: 30;">Jennifer Betancourt, Youth Advisor, Riverside JACL</h5>
-
+    <hr>
+    <div class="row">
+      <div class="col-xs-12 col-md-3">
+        <h3 style="margin-left: 10;"><a href="incsocal.weebly.com/about.html" target="_blank">Intercollegiate Nikkei Council</a></h3>
+      </div>
+      <div class="col-xs-6 col-md-1">  
+        <a href="incsocal.weebly.com/about.html"><img src="pictures/inc.jpg" class="img-responsive" alt="INC" width="120" height="60"></a>
+      </div>
+    </div>
+    <h4 style="margin-left: 20;">President, INC Representative | Southern California | 2016 - 2018</h4>
+    <p style="margin-left: 30;">Represented UCR as an INC Representative before assuming presidency over all of INC on June 2017.
+      Managed a board of 25 individuals from 12 different schools' NSUs across colleges/universities in Southern California, who help plan $10,000+ events,
+      network between NSUs, and manage their respective NSUs totaling 1000+ general members.</p>
+    <hr>
+    <div class="row">
+      <div class="col-xs-12 col-md-3">
+        <h3 style="margin-left: 10;"><a href="https://highlanderlink.ucr.edu/organization/nsu" target="_blank">UCR Nikkei Student Union</a></h3>
+      </div>
+      <div class="col-xs-6 col-md-1">  
+        <a href="https://highlanderlink.ucr.edu/organization/nsu"><img src="pictures/ucrnsu.jpeg" class="img-responsive" alt="UCRNSU" width="120" height="60"></a>
+      </div>
+    </div>
+    <h4 style="margin-left: 20;">President, Culture Night Chair | UC Riverside | 2015 - 2018</h4>
+    <p style="margin-left: 30;">NSU is a sociocultural club that promotes Japanese American culture and service.
+      Led a committee for the planning and production of a $2000 culture night before assuming presidency May 2017.
+      Managed a board of 9 individuals who worked together to run UCR NSU with 100+ active members.</p>
+    <hr>
+    <div class="row">
+      <div class="col-xs-12 col-md-3">
+        <h3 style="margin-left: 10;">The Laptop Experts</h3>
+      </div>
+    </div>
+    <h4 style="margin-left: 20;">Intern | Brea, CA | 2014</h4>
+    <p style="margin-left: 30;">Worked for an independent business that fixes laptops as well as other various electronics.
+      Creating invoices and estimates with Quickbooks, and sorted and recorded electronic parts, saving 150 hours for employers.</p>
+    
 </div>
 
 </body>
