--- a/workExperience.html
+++ b/workExperience.html
@@ -86,10 +86,10 @@
     <hr>
     <div class="row">
       <div class="col-xs-12 col-md-3">
-        <h3 style="margin-left: 10;"><a href="incsocal.weebly.com/about.html" target="_blank">Intercollegiate Nikkei Council</a></h3>
+        <h3 style="margin-left: 10;"><a href="https://incsocal.weebly.com/about.html" target="_blank">Intercollegiate Nikkei Council</a></h3>
       </div>
       <div class="col-xs-6 col-md-1">  
-        <a href="incsocal.weebly.com/about.html"><img src="pictures/inc.jpg" class="img-responsive" alt="INC" width="60" height="60"></a>
+        <a href="https://incsocal.weebly.com/about.html"><img src="pictures/inc.jpg" class="img-responsive" alt="INC" width="60" height="60"></a>
       </div>
     </div>
     <h4 style="margin-left: 20;">President, INC Representative | Southern California | 2016 - 2018</h4>
@@ -112,7 +112,7 @@
     <hr>
     <div class="row">
       <div class="col-xs-12 col-md-3">
-        <h3 style="margin-left: 10;">The Laptop Experts</h3>
+        <h3 style="margin-left: 10;"><a href="https://goo.gl/maps/sr11Z84DwdpBKzCG6">The Laptop Experts</a></h3>
       </div>
     </div>
     <h4 style="margin-left: 20;">Intern | Brea, CA | 2014</h4>
