link target blank

--- a/workExperience.html
+++ b/workExperience.html
@@ -69,10 +69,10 @@
         <h3 style="margin-left: 10;"><a href="https://jacl.org" target="_blank">Japanese American Citizens League</a></h3>
       </div>
       <div class="col-xs-6 col-md-1">  
-        <a href="https://www.jaclpsw.org/"><img src="pictures/pswlogo.png" class="img-responsive" alt="PSW" width="120" height="60"></a>
+        <a href="https://www.jaclpsw.org/" target="_blank"><img src="pictures/pswlogo.png" class="img-responsive" alt="PSW" width="120" height="60"></a>
       </div>
       <div class="col-xs-6 col-md-1">  
-        <a href="https://jacl.org/"><img src="pictures/JACL_Logo.png" class="img-responsive" alt="JACL" width="60" height="60"></a>
+        <a href="https://jacl.org/" target="_blank"><img src="pictures/JACL_Logo.png" class="img-responsive" alt="JACL" width="60" height="60"></a>
       </div>
     </div>
     <h4 style="margin-left: 20;">Youth Advisor, Newsletter Editor | <a href="https://riversidejacl.org/riverside_jacl/pages/" target="_blank">Riverside Chapter</a> | September 2016 - Present</h4>
@@ -89,7 +89,7 @@
         <h3 style="margin-left: 10;"><a href="https://incsocal.weebly.com/about.html" target="_blank">Intercollegiate Nikkei Council</a></h3>
       </div>
       <div class="col-xs-6 col-md-1">  
-        <a href="https://incsocal.weebly.com/about.html"><img src="pictures/inc.jpg" class="img-responsive" alt="INC" width="60" height="60"></a>
+        <a href="https://incsocal.weebly.com/about.html" target="_blank"><img src="pictures/inc.jpg" class="img-responsive" alt="INC" width="60" height="60"></a>
       </div>
     </div>
     <h4 style="margin-left: 20;">President, INC Representative | Southern California | 2016 - 2018</h4>
@@ -102,7 +102,7 @@
         <h3 style="margin-left: 10;"><a href="https://highlanderlink.ucr.edu/organization/nsu" target="_blank">UCR Nikkei Student Union</a></h3>
       </div>
       <div class="col-xs-6 col-md-1">  
-        <a href="https://highlanderlink.ucr.edu/organization/nsu"><img src="pictures/ucrnsu.jpeg" class="img-responsive" alt="UCRNSU" width="60" height="60"></a>
+        <a href="https://highlanderlink.ucr.edu/organization/nsu" target="_blank"><img src="pictures/ucrnsu.jpeg" class="img-responsive" alt="UCRNSU" width="60" height="60"></a>
       </div>
     </div>
     <h4 style="margin-left: 20;">President, Culture Night Chair | UC Riverside | 2015 - 2018</h4>
@@ -112,7 +112,7 @@
     <hr>
     <div class="row">
       <div class="col-xs-12 col-md-3">
-        <h3 style="margin-left: 10;"><a href="https://goo.gl/maps/sr11Z84DwdpBKzCG6">The Laptop Experts</a></h3>
+        <h3 style="margin-left: 10;"><a href="https://goo.gl/maps/sr11Z84DwdpBKzCG6" target="_blank">The Laptop Experts</a></h3>
       </div>
     </div>
     <h4 style="margin-left: 20;">Intern | Brea, CA | 2014</h4>
