testing size formatting changes

--- a/workExperience.html
+++ b/workExperience.html
@@ -32,7 +32,7 @@
   </div>
 </nav>
 
-<div class="container-fluid">
+<div class="container-fluid" max-width="800">
     <div class="row">
       <div class="col-xs-12 col-md-3">
         <h3 style="margin-left: 10;"><a href="https://www.jetheaddev.com/" target="_blank">JetHead Development Inc.</a></h3>
