--- a/resume.html
+++ b/resume.html
@@ -32,7 +32,7 @@
   </div>
 </nav>
   <div class='embed-responsive' style='padding-bottom:150%'>
-    <object data="/pictures/BraetonBuckleyResume2023.pdf" type="application/pdf" width="100%" height="800px">
+    <object data="/pictures/BraetonBuckleyResume2023.pdf" type="application/pdf" width="100%" height="100%">
       <p><a href="/pictures/BraetonBuckleyResume2023.pdf"> Download Resume PDF</a></p>
     </object>
   </div>
