--- a/home.html
+++ b/home.html
@@ -32,12 +32,12 @@
   </div>
 </nav>
 
-<div class="container-fluid">
+<div class="container-fluid" style="max-width: 800px">
 
 <h3> Hello, I'm Braeton Buckley</h3>
-<h4 max-width="800px"> I'm a Software Engineer with 3 years of experience at <a href="https://jetheaddev.com">JetHead Development Inc.</a>
+<h4> I'm a Software Engineer with 3 YOE at <a href="https://jetheaddev.com">JetHead Development Inc.</a>
 I received my Bachelor's in Computer Science in 2019 from <a href="https://www.ucr.edu/">UC Riverside.</a></h4>
-<img src="pictures/BB_LinkedIn.jpg" class="img-responsive" alt="BB_LinkedIn" width="800" height="800">
+<img src="pictures/BB_LinkedIn.jpg" class="img-responsive" alt="BB_LinkedIn">
 
 </div>
 
