Revert "testing size formatting changes"
This reverts commit de247187b731244e01b59a98fea29b8487def36b.

--- a/projects.html
+++ b/projects.html
@@ -32,7 +32,7 @@
   </div>
 </nav>
 
-<div class="container-fluid" style="max-width: 800px; justify-content: flex-start;">
+<div class="container-fluid">
 
 <h4> QR Code Troubleshooting | JetHead, DirecTV | 2022</h4>
 <h5> Tools: C++, JSON, Visual Studio, GitLab, DirecTV Genie Mini, Jira, Confluence, Linux</h5>
