resume margins and project added

--- a/projects.html
+++ b/projects.html
@@ -34,15 +34,22 @@
 
 <div class="container-fluid">
 
-<h4> QR Code Troubleshooting | JetHead, DirecTV | 2022</h4>
-<h5> Tools: C++, JSON, Visual Studio, GitLab, DirecTV Genie Mini, Jira, Confluence, Linux</h5>
+  <h4> Reconnect in Standby | JetHead, DirecTV, ATT | 2023</h4>
+  <h5> Tools: C++, Visual Studio, GitLab, DirecTV Genie Mini, Jira, Confluence, Linux</h5>
+    <p> Reconnected the client to the server in standby to reduce boot up time by 2 minutes in scenarios where the client lost connection in standby.
+      Investigated server connection architecture in order to optimize design.
+      Implemented two alternative designs for acceptance by the server team.
+    </p>
+
+  <h4> QR Code Troubleshooting | JetHead, DirecTV, ATT | 2022</h4>
+  <h5> Tools: C++, JSON, Visual Studio, GitLab, DirecTV Genie Mini, Jira, Confluence, Linux</h5>
   <p> Embedded QR codes into Video Connection Lost troubleshooting screens for the DirecTV Genie Mini to reduce calls to Customer Care.
     Scanning QR codes redirected to additional <a href="https://www.directv.com/support/satellite/article/KM1453756">troubleshooting help sites</a>.
     There were different QR Codes and troubleshooting flows based on the error codes: 61x for wireless, and 62x for wired.
     Reviewed troubleshooting flow for better client and customer understanding.
   </p>
 
-<h4> Free Memory Tracking KPIs | JetHead, DirecTV | 2021</h4>
+<h4> Free Memory Tracking KPIs | JetHead, DirecTV, ATT | 2021</h4>
 <h5> Tools: C++, NewRelic, Visual Studio, Jenkins, DirecTV Genie Mini, Jira, Confluence, Linux</h5>
   <p> Created KPIs to track the CPU usage and free memory for the DirecTV Genie Mini.
     The data was collected on <a href="https://docs.newrelic.com/">New Relic</a> and organized into dashboards for viewing by ATT.
