--- a/resume.html
+++ b/resume.html
@@ -31,7 +31,7 @@
     </div>
   </div>
 </nav>
-  <div class='embed-responsive' style='padding-bottom:150%'>
+  <div class='embed-responsive embed'>
     <object data="/pictures/BraetonBuckleyResume2023.pdf" type="application/pdf" width="100%" height="800px">
       <p><a href="/pictures/BraetonBuckleyResume2023.pdf"> Download Resume PDF</a></p>
     </object>
