--- a/resume.html
+++ b/resume.html
@@ -34,6 +34,7 @@
   <object class='embed-responsive object' data="/pictures/BraetonBuckleyResume2023.pdf" type="application/pdf">
     <p><a href="/pictures/BraetonBuckleyResume2023.pdf"> Download Resume PDF</a></p>
   </object>
+  <p>test</p>
 
 </body>
 </html>
