remove object class change div class

--- a/resume.html
+++ b/resume.html
@@ -31,11 +31,11 @@
     </div>
   </div>
 </nav>
-<div class="container-fluid">
-  <object class='embed-responsive object' data="/pictures/BraetonBuckleyResume2023.pdf" type="application/pdf" width="100%" height="100%">
+<div class="embed-responsive">
+  <object data="/pictures/BraetonBuckleyResume2023.pdf" type="application/pdf" width="100%" height="100%">
     <p><a href="/pictures/BraetonBuckleyResume2023.pdf"> Download Resume PDF</a></p>
   </object>
-  <p>test3</p>
+  <p>test4</p>
 </div>
 
 </body>
