--- a/resume.html
+++ b/resume.html
@@ -8,7 +8,7 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/js/bootstrap.min.js"></script>
 </head>
-<body>
+<body style="height: 100%; background: red;">
 
 <nav class="navbar navbar-inverse">
   <div class="container-fluid">
@@ -31,7 +31,7 @@
     </div>
   </div>
 </nav>
-<p>test10</p>
+<p>test12</p>
 <div class="embed-responsive" style="padding-bottom: 10%; overflow: auto; width: 100%; height: 100%; background: green;">
   <object class="embed-responsive object" data="/pictures/BraetonBuckleyResume2023.pdf" type="application/pdf" style="width: 100%; height: 100%; background: blue;">
     <p><a href="/pictures/BraetonBuckleyResume2023.pdf"> Download Resume PDF</a></p>
