update contact info

--- a/workExperience.html
+++ b/workExperience.html
@@ -38,7 +38,7 @@
         <h3 style="margin-left: 10;"><a href="https://www.jetheaddev.com/" target="_blank">JetHead Development Inc.</a></h3>
       </div>
       <div class="col-xs-6 col-md-1">  
-        <a href=https://www.jetheaddev.com/"><img src="pictures/jethead_logo.png" class="img-responsive" alt="JetHead" width="130" height="40"></a>
+        <a href="https://www.jetheaddev.com/"><img src="pictures/jethead_logo.png" class="img-responsive" alt="JetHead" width="130" height="40"></a>
       </div>  
       <div class="col-xs-6 col-md-1">  
         <a href="https://www.directv.com"><img src="pictures/directv_logo.svg" class="img-responsive" alt="DirecTV" width="130" height="40"></a>
