--- a/contact.html
+++ b/contact.html
@@ -36,7 +36,14 @@
 
 <h3><b> Email:</b> braetonbuckley@gmail.com</h3>
 <h3><b> Phone:</b> 714-904-2063</h3>
-<h3><a href="https://www.linkedin.com/in/braeton-buckley-5b8908b0/">LinkedIn</a></h3>
+<div class="row">
+  <div class="col-xs-6 col-md-1">  
+    <a href="https://www.linkedin.com/in/braeton-buckley-5b8908b0/"><img src="pictures/linkedin_logo.png" class="img-responsive" alt="LinkedIn" width="100" height="100"></a>
+  </div>  
+  <div class="col-xs-6 col-md-1">  
+    <a href="https://github.com/KallenXCC"><img src="pictures/github_logo.png" class="img-responsive" alt="GitHub" width="100" height="100"></a>
+  </div>
+</div>
 
 </div>
 
