add linkedin and github to home/index

--- a/home.html
+++ b/home.html
@@ -34,8 +34,18 @@
 
 <div class="container-fluid">
 
-<h3> Hello, I'm Braeton Buckley</h3>
-<h4> I'm a Software Developer specializing in C++. I have 3 years of experience at <a href="https://jetheaddev.com">JetHead Development Inc.</a>
+<div class="row">
+  <div class="col-xs-12 col-md-3">
+    <h3 style="margin-left: 10;">Hello, I'm Braeton Buckley</h3>
+  </div>
+  <div class="col-xs-6 col-md-1">  
+    <a href="https://www.linkedin.com/in/braeton-buckley-5b8908b0/"><img src="pictures/linkedin_logo.jpg" class="img-responsive" alt="LinkedIn" width="100" height="100"></a>
+  </div>  
+  <div class="col-xs-6 col-md-1">  
+    <a href="https://github.com/KallenXCC"><img src="pictures/github_logo.png" class="img-responsive" alt="GitHub" width="100" height="100"></a>
+  </div>
+</div>
+<h4> I'm a Software Engineer with 3 years of experience at <a href="https://jetheaddev.com">JetHead Development Inc.</a>
 I received my Bachelor's in Computer Science in 2019 from <a href="https://www.ucr.edu/">UC Riverside.</a></h4>
 <img src="pictures/BB_LinkedIn.jpg" class="img-responsive" alt="BB_LinkedIn" width="800" height="800">
 
