--- a/index.html
+++ b/index.html
@@ -36,13 +36,24 @@
 
 <div class="container-fluid">
 
-<h3> Hello, I'm Braeton Buckley</h3>
+<div class="row">
+    <div class="col-xs-12 col-md-3">
+        <h3 style="margin-left: 10;">Hello, I'm Braeton Buckley</h3>
+    </div>
+    <div class="col-xs-6 col-md-1">  
+        <a href="https://www.linkedin.com/in/braeton-buckley-5b8908b0/"><img src="pictures/linkedin_logo.jpg" class="img-responsive" alt="LinkedIn" width="100" height="100"></a>
+    </div>  
+    <div class="col-xs-6 col-md-1">  
+        <a href="https://github.com/KallenXCC"><img src="pictures/github_logo.png" class="img-responsive" alt="GitHub" width="100" height="100"></a>
+    </div>
+</div>
 <div style="user-select: none; -webkit-user-select: none; -moz-user-select: none;">
 <canvas id="game">Sorry, your browser doesn't support the &lt;canvas&gt; element.</canvas>
 </div>
 <script src="scripts/snake.js"></script>
 
 </div>
+<p>(Swipe or use WASD or arrow keys to move)</p>
 
 </body>
 </html>
