--- a/index.html
+++ b/index.html
@@ -37,12 +37,12 @@
 <div class="container-fluid">
 
 <h3 style="margin-left: 10;">Hello, I'm Braeton Buckley</h3>
-    <a href="https://www.linkedin.com/in/braeton-buckley-5b8908b0/"><img src="pictures/linkedin_logo.jpg" class="img-responsive" alt="LinkedIn" width="40" height="40"></a>
-    <a href="https://github.com/KallenXCC"><img src="pictures/github_logo.png" class="img-responsive" alt="GitHub" width="40" height="40"></a>
+    <a href="https://www.linkedin.com/in/braeton-buckley-5b8908b0/"><img style="display: inline; white-space: nowrap;" src="pictures/linkedin_logo.jpg" alt="LinkedIn" width="40" height="40"></a>
+    <a href="https://github.com/KallenXCC"><img style="display: inline; white-space: nowrap;" src="pictures/github_logo.png" alt="GitHub" width="40" height="40"></a>
 <div style="user-select: none; -webkit-user-select: none; -moz-user-select: none;">
 <canvas id="game">Sorry, your browser doesn't support the &lt;canvas&gt; element.</canvas>
-<caption style="text-align: center;">(Swipe or use WASD or arrow keys to move)</caption>
 </div>
+<figcaption style="text-align: center; margin-left: 10;">(Swipe or use WASD or arrow keys to move)</figcaption>
 <script src="scripts/snake.js"></script>
 
 </div>
