--- a/index.html
+++ b/index.html
@@ -41,11 +41,11 @@
     <a href="https://github.com/KallenXCC"><img style="display: inline; white-space: nowrap;" src="pictures/github_logo.png" alt="GitHub" width="40" height="40"></a>
 <div style="user-select: none; -webkit-user-select: none; -moz-user-select: none;">
 <canvas id="game">Sorry, your browser doesn't support the &lt;canvas&gt; element.</canvas>
-<figcaption style="text-align: center; margin-left: 10;">(Swipe or use WASD or arrow keys to move)</figcaption>
 </div>
 <script src="scripts/snake.js"></script>
 
 </div>
+<figcaption style="margin-left: 40;">(Swipe or use WASD or arrow keys to move)</figcaption>
 
 </body>
 </html>
