--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
 <script src="scripts/snake.js"></script>
 
 </div>
-<figcaption style="margin-left: 40;">(Swipe or use WASD or arrow keys to move)</figcaption>
+<figcaption style="margin-left: 40px;">(Swipe or use WASD or arrow keys to move)</figcaption>
 
 </body>
 </html>
