styles readability test

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <style> canvas {border: 1px solid white; background-color: black; background-image:url("pictures/BB_LinkedInCrop.jpg"); background-size: 400px;
     width: 400px; max-width: 100%; height: auto; background-repeat: no-repeat;}</style>
 </head>
-<body style="overflow: hidden;">
+<body style="overflow: hidden; margin: 40px auto; max-width: 650px; line-height: 1.6; font-size: 18px; color: #444; padding: 0 10px; background-color: #EEEEEE;">
 
 <nav class="navbar navbar-inverse">
     <div class="container-fluid">
