tracking snake score

--- a/index.html
+++ b/index.html
@@ -39,6 +39,8 @@
 <h3 style="margin-left: 10;">Hello, I'm Braeton Buckley</h3>
     <a href="https://www.linkedin.com/in/braeton-buckley-5b8908b0/"><img style="display: inline; white-space: nowrap;" src="pictures/linkedin_logo.jpg" alt="LinkedIn" width="40" height="40"></a>
     <a href="https://github.com/KallenXCC"><img style="display: inline; white-space: nowrap;" src="pictures/github_logo.png" alt="GitHub" width="40" height="40"></a>
+    <p>High Score: <span id="displayHighScore"></span>  </p>
+    <p>Score: <span id="displayScore"></span></p>
 <div style="user-select: none; -webkit-user-select: none; -moz-user-select: none;">
 <canvas id="game">Sorry, your browser doesn't support the &lt;canvas&gt; element.</canvas>
 </div>
